fixing image dragable on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
 }
 
 img{
+  pointer-events: none;
   user-drag: none;
   -webkit-user-drag: none;
   user-select: none;
